--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,18 @@
+a {
+    text-decoration: underline!important;
+}
+#profile-pic {
+    padding-top: 15px;
+}
+#profile-pic img {
+    max-width: 100px;
+    max-height: 100px;
+    background-color: gold;
+}
 .fb-head, .fb-head a {
     background-color: #2E7ADE!important;
     color: #FFF!important;
+    text-decoration: none!important;
 }
 
 .fb-head a {
@@ -87,4 +99,73 @@
 }
 .friends:last-child{
     margin-bottom:15px!important;
+}
+
+.comment-box {
+    padding-top: 15px;
+}
+
+.comment-footer {
+    background-color: #c5c5c5;
+    margin: 0 -15px -15px;
+    padding: 10px;
+}
+.comment-footer ul {
+    padding: unset;
+}
+.comment-footer ul li {
+    display: inline;
+    margin: 0 15px 0 0;
+}
+
+#main-comment-form {
+    border: 1px solid black;
+    margin-top: 20px;
+}
+
+#main-comment-form-top {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    background-color: #c5c5c5;
+}
+
+.comment-form-textarea {
+    margin: 5px;
+}
+.comment-form-textarea textarea {
+    width: 100%;
+    height: 100px;
+    resize: none;
+    border: 1px solid black;
+    padding: 15px;
+}
+
+.comment-form-footer {
+    background-color: #c5c5c5;
+    padding: 5px;
+}
+/*
+ * Row with equal height columns
+ * --------------------------------------------------
+ */
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+.right-border {
+    border-right: 1px solid black;
+}
+/* stuff */
+.navbar-form .input-group {
+    display: table;
+}
+.navbar-form .input-group .input-group-addon,
+.navbar-form .input-group .input-group-btn {
+    white-space: nowrap;
+    width: 1%;
+}
+.navbar-form .input-group .form-control {
+    width: 100%;
 }
